# rust-web-dev

./: :lectager.db:  Cargo.toml  README.md  lectager.db
src/: main.rs
src/lectager/: dbcreation.rs  mod.rs
src/lectager/constants/: mod.rs
src/lectager/models/: lecture.rs  student.rs
src/lectager/static/css/: styles.css
src/lectager/static/template/: index.html
static/templates/: index.html  profile.html
static/templates/lectager/: index.html
