[package]
name = "rust-web-dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
hyper = { version = "0.14.27", features = ["full"] }
minijinja = { version = "1.0.6", features = ["loader"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_derive = "1.0.183"
sqlite = "0.31.0"
tokio = { version = "1.31.0", features = ["full"] }
tower = "0.4.13"
